# turkmen-voice-assistant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
speechai/: manage.py
speechai/core/: asr.py
speechai/speech_api/: apps.py  views.py
speechai/speechai/: asgi.py  urls.py  utils.py  wsgi.py
speechai/speechai/settings/: base.py  development.py  production.py
